tests/fixtures/invalid/pow_none_int_dict.py
# Cannot call pow() with None, Int, Dict[str, int]
x = pow(None, 1, {"a": 1})
